fix PIRATE-4434, tweak style for basket on mobile

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -127,6 +127,7 @@ a.btn.ecombasket-summary-link {
     }
     @media @mobile {
         display: block;
+        text-align: center;
     }
 }
 
@@ -149,8 +150,8 @@ a.btn.ecombasket-summary-link {
     .ecombasket-pull {
         width: 150px;
         padding: 0.5em 2.2em 0.5em 0em;
+        margin-left: auto;
         background-color: transparent;
-        position: absolute;
         right: 0;
         border: 2px solid lighten(@color-swatch5,15%);
         @media @mobile {
@@ -217,7 +218,6 @@ a.btn.ecombasket-summary-link {
         padding: 0 1em 0.5em;
         max-height: 400px;
         overflow-y: scroll;
-        margin-top: 48px;
         position: absolute;
         right: -3em;
         left: 3.5em;
